--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ color: white;
 /* Links */
 
 a {
-  color: blue;
+  color: white;
   word-wrap: break-word;
   -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
   -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
